--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
               <li>
                 <p>
                     <form action="/delete" method="post">
-                    <input type="text"  name="task"  value=" <%=item%>"  readonly>
+                    <input type="text"  name="task"  value=" <%=item.name%>"  readonly>
                     <button type="submit" class="btn btn-dark">done</button>
                     </form >
         
